# Lima-camera-xpad

./: .gitignore  CMakeLists.txt  pom.xml
doc/: Doxyfile  index.rst
include/: XpadBufferCtrlObj.h  XpadCamera.h  XpadDetInfoCtrlObj.h  XpadEventCtrlObj.h  XpadInterface.h  XpadSyncCtrlObj.h  XpadTask.h
python/: __init__.py
sip/: XpadCamera.sip  XpadInterface.sip
src/: Makefile  XpadBufferCtrlObj.cpp  XpadCamera.cpp  XpadDetInfoCtrlObj.cpp  XpadEventCtrlObj.cpp  XpadInterface.cpp  XpadSyncCtrlObj.cpp  XpadTask.cpp
test/: tango_xpad_test.py  test_save_config_l.py
